toolchain/internal/core/analysis/testdata/errors/naming/enum_member_annotation_not_camel.vdl
// format:off
// @expect: E102

enum Status {
  @badAnn
  Active
}
